# gestione_farmacia

./: README.md  gestione-farmacia.mwb  gestione-farmacia.mwb.bak  gestione-farmacia.mwb.beforefix  gestione_farmacia.sql  populate_bd.sql
client/: .env  CMakeList.txt  CMakeLists.txt  Makefile  main.c
client/controller/: amministrativo.c  amministrativo.h  login.c  medico.c  medico.h
client/model/: db.c  db.h
client/utils/: io.c  io.h
client/view/: amministrativo.c  amministrativo.h  login.c  medico.c  medico.h
